[gd_scene load_steps=16 format=3 uid="uid://clid1430bou25"]

[ext_resource type="Script" path="res://Scripts/example_gecko.gd" id="1_qtx8y"]
[ext_resource type="PackedScene" uid="uid://dq38hvfftcgds" path="res://models/Gecko1.glb" id="2_dmihm"]
[ext_resource type="Script" path="res://addons/3dEnemyToolkit/FollowTarget.gd" id="3_ltf8j"]
[ext_resource type="Script" path="res://addons/3dEnemyToolkit/RandomTarget3D.gd" id="4_tfas1"]
[ext_resource type="Script" path="res://addons/3dEnemyToolkit/SimpleVision3D.gd" id="5_2hpht"]
[ext_resource type="PackedScene" uid="uid://yf31asvmvsgl" path="res://HealthBar/HealthBarBillboard.tscn" id="6_geyyh"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ck8vg"]
radius = 0.660098
height = 3.38889

[sub_resource type="BoxShape3D" id="BoxShape3D_xyq7i"]
size = Vector3(2.02265, 1.36768, 2.83508)

[sub_resource type="Animation" id="Animation_fdjq7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Characer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -0.741375, 0.612007)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Characer:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.50585, -2.09606, -1.04815)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pivot:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_me0dw"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Characer:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.933333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-1.50585, -2.09606, -1.04815), Vector3(1.13196, 3.00951, 3.04721)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Characer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.933333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.741375, 0.612007), Vector3(0, 0.808083, 1.14993)]
}

[sub_resource type="Animation" id="Animation_ay2nk"]
resource_name = "eating"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Characer:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 1.7, 1.96667),
"transitions": PackedFloat32Array(0.435275, 0.517632, 0.554785, 1.03527),
"update": 0,
"values": [Vector3(-1.50585, -2.09606, -1.04815), Vector3(-1.17175, -2.99656, -0.137308), Vector3(-1.17175, -2.99656, -0.137308), Vector3(-1.50585, -2.09606, -1.04815)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.733333, 0.966667, 1.2, 1.43333, 1.96667),
"transitions": PackedFloat32Array(1.23114, 2, 2, 2, 2, 2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.093218, 0), Vector3(0, 0.00671951, 0), Vector3(0, -0.093218, 0), Vector3(0, 0.00671951, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_0y8ya"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Characer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.00961971, 0.336237, 0.507238),
"transitions": PackedFloat32Array(0.0490366, 9.51368, 0.0490366),
"update": 0,
"values": [Vector3(0, -0.741375, 0.612007), Vector3(0, -0.264777, 0.612007), Vector3(0, -0.741375, 0.612007)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Characer:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.334853, 0.506825),
"transitions": PackedFloat32Array(0.148651, 6.27667, 388.023),
"update": 0,
"values": [Vector3(-1.54833, 3.13988, 0), Vector3(-1.84481, 1.90241, 1.23918), Vector3(-1.54833, 3.13988, 0)]
}

[sub_resource type="Animation" id="Animation_8jrx6"]
resource_name = "wander2"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Characer:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.39642, 0.439453, 0.968883),
"transitions": PackedFloat32Array(0.435275, 2.46229, 0.435275, 2.63902),
"update": 0,
"values": [Vector3(-1.50585, -2.09606, -1.04815), Vector3(-1.50585, -2.22715, -1.04815), Vector3(-1.50585, -2.09606, -1.04815), Vector3(-1.50585, -1.97944, -1.04815)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wfyv7"]
_data = {
"RESET": SubResource("Animation_fdjq7"),
"die": SubResource("Animation_me0dw"),
"eating": SubResource("Animation_ay2nk"),
"walk": SubResource("Animation_0y8ya"),
"wander2": SubResource("Animation_8jrx6")
}

[sub_resource type="ViewportTexture" id="ViewportTexture_dlvnf"]
viewport_path = NodePath("SubViewport")

[node name="Gecko" type="CharacterBody3D"]
script = ExtResource("1_qtx8y")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.00118677, -0.999999, 0, 0.999999, -0.00118677, 0, 0.174636, 0.329032)
shape = SubResource("CapsuleShape3D_ck8vg")

[node name="Pivot" type="Node3D" parent="."]

[node name="Characer" parent="Pivot" instance=ExtResource("2_dmihm")]
transform = Transform3D(-0.998417, -0.00352785, -0.0561515, -0.0562366, 0.0323968, 0.997891, -0.0017013, 0.999469, -0.0325439, 0, -0.741375, 0.612007)

[node name="MouthZone" type="Area3D" parent="Pivot"]

[node name="MouthShape3D" type="CollisionShape3D" parent="Pivot/MouthZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0436198, 0.202575, -0.564808)
shape = SubResource("BoxShape3D_xyq7i")

[node name="FollowTarget3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 2.0
debug_enabled = true
debug_use_custom = true
debug_path_custom_color = Color(0.844148, 7.5084e-05, 0.666368, 1)
script = ExtResource("3_ltf8j")

[node name="StopMovingTimer" type="Timer" parent="FollowTarget3D"]
one_shot = true

[node name="RandomTarget3D" type="Node3D" parent="."]
script = ExtResource("4_tfas1")
MaxRadius = 30.0

[node name="SimpleVision3D" type="Node3D" parent="."]
script = ExtResource("5_2hpht")
height = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wfyv7")
}

[node name="HungerTimer" type="Timer" parent="."]
autostart = true

[node name="GraceTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Billboard" parent="." node_paths=PackedStringArray("character") instance=ExtResource("6_geyyh")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 2.06091, 0)
texture = SubResource("ViewportTexture_dlvnf")
character = NodePath("..")

[connection signal="Hungry" from="." to="SimpleVision3D" method="_on_gecko_hungry"]
[connection signal="Starved" from="." to="FollowTarget3D" method="_on_gecko_starved"]
[connection signal="body_entered" from="Pivot/MouthZone" to="." method="_on_mouth_zone_entered"]
[connection signal="ReachedTarget" from="FollowTarget3D" to="." method="_on_follow_target_3d_reached_target"]
[connection signal="navigation_finished" from="FollowTarget3D" to="." method="_on_follow_target_3d_navigation_finished"]
[connection signal="timeout" from="FollowTarget3D/StopMovingTimer" to="FollowTarget3D" method="_on_stop_moving_timer_timeout"]
[connection signal="GetSight" from="SimpleVision3D" to="." method="_on_simple_vision_3d_get_sight"]
[connection signal="LostSight" from="SimpleVision3D" to="." method="_on_simple_vision_3d_lost_sight"]
[connection signal="timeout" from="HungerTimer" to="." method="_on_hunger_timer_timeout"]
[connection signal="timeout" from="GraceTimer" to="." method="_on_grace_timer_timeout"]
